edited home page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
         </nav>
     </header>
 
+    <section class="home" id="home">
+        <div class="content">
+            <h2>FRESH FLOWERS</h2>
+            <span> beatiful and natural flowers</span>
+            <p> Lorem ipsum dolor sit amet, 
+                consectetur adipisicing elit. 
+                Obcaecati error porro accusantium quod? 
+                Provident molestiae alias quis ab,
+                 incidunt molestias nostrum doloribus ea adipisci 
+                 quidem culpa velit dolores eum fuga!
+            </p> 
+            <a href="#" class="button">shop now</a>
+        </div>
+    </section>
+
     
 </body>
 </html>
