--- a/about.html
+++ b/about.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <header>
-        <a href="#" class="logo">Flower<span>.</span></a>
+      <a href="#" class="logo">Flower<span>.</span></a>
 
-        <nav class="navbar">
-            <a href="#home">HOME</a>
-            <a href="#about">ABOUT US</a>
-            <a href="#products">PRODUCTS</a>
-            <a href="#contact">CONTACT US</a>
-        </nav>
+      <nav class="navbar">
+        <ul>
+           <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT US</a>
+            <a href="products.html">PRODUCTS</a>
+            <a href="contact.html">CONTACT US</a>
+        </ul>
+      </nav>
     </header>
-
-    
-</body>
+    <section class="about" id="about">
+      <h1 class="heading"><span> about us</span></h1>
+      <div class="row">
+        <div class="content">
+          <h2>Why choose us?</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem in
+            nostrum ea numquam ab provident laboriosam voluptates. Quasi quos,
+            dolorem est aliquam tenetur nulla saepe autem vitae, asperiores,
+            excepturi impedit.
+          </p>
+          <a href="#" class="button">Learn more</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
