--- a/products.html
+++ b/products.html
@@ -10,12 +10,12 @@
     <header>
         <a href="#" class="logo">Flower<span>.</span></a>
 
-        <nav class="navbar">
-            <a href="#home">HOME</a>
-            <a href="#about">ABOUT US</a>
-            <a href="#products">PRODUCTS</a>
-            <a href="#contact">CONTACT US</a>
-        </nav>
+       <nav class="navbar">
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT US</a>
+            <a href="products.html">PRODUCTS</a>
+            <a href="contact.html">CONTACT US</a>
+        </nav> 
     </header>
 
     
