updated html files

--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="#" class="logo">Flower<span>.</span></a>
+      <a href="#" class="logo">PETALS<span>.</span></a>
 
       <nav class="navbar">
         <ul>
@@ -25,14 +25,15 @@
         <div class="content">
           <h2>Why choose us?</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem in
-            nostrum ea numquam ab provident laboriosam voluptates. Quasi quos,
-            dolorem est aliquam tenetur nulla saepe autem vitae, asperiores,
-            excepturi impedit.
+            Here at petals we provide the best quality flowers grown from all of Kenya,
+            we endevour to support all our local farmers.
+            all th flowers are carefully assesed by our team of expert flowrists.
+            the hoticultural industry is a rapidly growing indusrty and we pride ourselves on being the top.
           </p>
           <a href="#" class="button">Learn more</a>
         </div>
       </div>
     </section>
+    <script src="./js/about.js"></script>
   </body>
 </html>
