--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Flower<span>.</span></a>
+        <a href="#" class="logo">PETALS<span>.</span></a>
 
         <nav class="navbar">
             <a href="index.html">HOME</a>
@@ -22,17 +22,15 @@
         <div class="content">
             <h2>FRESH FLOWERS</h2>
             <span> beatiful and natural flowers</span>
-            <p> Lorem ipsum dolor sit amet, 
-                consectetur adipisicing elit. 
-                Obcaecati error porro accusantium quod? 
-                Provident molestiae alias quis ab,
-                 incidunt molestias nostrum doloribus ea adipisci 
-                 quidem culpa velit dolores eum fuga!
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Porro mollitia id, alias quia ullam voluptatum possimus velit
+                 aperiam reiciendis cum officiis illo! Officia ipsam, 
+                 nemo fugiat natus maxime voluptatibus consequuntur.
             </p> 
             <a href="#" class="button">shop now</a>
         </div>
     </section>
 
-    
+    <script src="./js/index.js"></script>
 </body>
 </html>
