--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Flower<span>.</span></a>
+        <a href="#" class="logo">PETALS<span>.</span></a>
 
         <nav class="navbar">
              <a href="index.html">HOME</a>
@@ -18,6 +18,6 @@
         </nav>
     </header>
 
-    
+    <script src="./js/contact.js"></script>
 </body>
 </html>
