updated css and products file

--- a/products.html
+++ b/products.html
@@ -17,6 +17,64 @@
             <a href="contact.html">CONTACT US</a>
         </nav> 
     </header>
+    <section class="products" id="products">
+        <h1 class="heading"> Latest <span>products</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <span class="discount">-10%</span>
+                <div class="image">
+                 <img src="images/101.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>glass vase</h3>
+                    <div class="price">-ksh1200 <span>ksh1500</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-10%</span>
+                <div class="image">
+                 <img src="images/102.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>pink tulips</h3>
+                    <div class="price">-ksh1000 <span>ksh1200</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-10%</span>
+                <div class="image">
+                 <img src="images/103.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Carnations</h3>
+                    <div class="price">-ksh1500 <span>ksh2000</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-10%</span>
+                <div class="image">
+                 <img src="images/104.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>daisy</h3>
+                    <div class="price">-ksh900 <span>ksh1000</span></div>
+                </div>
+            </div>
+            <div class="box">
+                <span class="discount">-10%</span>
+                <div class="image">
+                 <img src="images/105.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>sunflower</h3>
+                    <div class="price">-ksh1200 <span>ksh1500</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="./js/products.js"></script>
 </body>
