--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,20 @@
             <a href="contact.html">CONTACT US</a>
         </nav>
     </header>
+     <form id="contactForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" placeholder="Write your message here" required></textarea>
+
+    <button type="submit">Submit</button>
+  </form>
+
+  <p id="responseMessage" class="hidden"></p>
 
     <script src="./js/contact.js"></script>
 </body>
