--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="input">
     <header>
         <a href="#" class="logo">PETALS<span>.</span></a>
 
@@ -17,7 +17,7 @@
             <a href="contact.html">CONTACT US</a>
         </nav>
     </header>
-     <form id="contactForm">
+     <form id="contactForm" class="input">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
