--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="input">
+<body>
     <header>
         <a href="#" class="logo">PETALS<span>.</span></a>
 
