--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="product">
     <header>
         <a href="#" class="logo">PETALS<span>.</span></a>
 
