updated contacts page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="content">
             <h2>FRESH FLOWERS</h2>
             <span> beatiful and natural flowers</span>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Porro mollitia id, alias quia ullam voluptatum possimus velit
-                 aperiam reiciendis cum officiis illo! Officia ipsam, 
-                 nemo fugiat natus maxime voluptatibus consequuntur.
+            <p> 
+                Welcome to Petals, your go-to destination for beautiful, fresh, and thoughtfully curated flowers delivered straight to your doorstep. At Petals, we believe every occasion, big or small, deserves the perfect floral touch. From vibrant bouquets that brighten birthdays to elegant arrangements that express love, gratitude, or sympathy, we have something for every moment.
+
+                Our shop is committed to quality and creativity. We source only the freshest blooms and collaborate with expert floral designers to craft stunning arrangements that leave lasting impressions. Whether you're looking to surprise a loved one or simply treat yourself, Petals makes it easy with a seamless online shopping experience.
             </p> 
             <a href="#" class="button">shop now</a>
         </div>
