--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <a href="contact.html">CONTACT US</a>
         </nav>
     </header>
+    <section class="submit">
      <form id="contactForm" class="input">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" required>
@@ -31,6 +32,7 @@
   </form>
 
   <p id="responseMessage" class="hidden"></p>
+    </section>
 
     <script src="./js/contact.js"></script>
 </body>
