updated contacts file

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,14 @@
             <a href="contact.html">CONTACT US</a>
         </nav>
     </header>
+    <section class="content">
+        <h1 class="heading"><span>Contact</span> us</h1>
+        <p>
+            please reach out to us for any feedback or any special requests.
+            if you want to be a supplier to Petals also contact us on our email
+            petals@gmail.com
+        </p>
+    </section>
     <section class="submit">
      <form id="contactForm" class="input">
     <label for="name">Name:</label>
