updated css and html

--- a/about.html
+++ b/about.html
@@ -29,6 +29,21 @@
             we endevour to support all our local farmers.
             all th flowers are carefully assesed by our team of expert flowrists.
             the hoticultural industry is a rapidly growing indusrty and we pride ourselves on being the top.
+            What We Offer:
+
+            Exquisite Flower Collections: Choose from a wide variety of bouquets and floral designs for every occasion.
+            Custom Arrangements: Personalize your bouquet to match your taste or convey your unique message.
+            Subscription Services: Keep your home or office blooming all year long with our convenient flower delivery subscriptions.
+            Same-Day Delivery: Because sometimes love can't wait.
+            Why Choose Petals?
+
+            Handpicked, Fresh Flowers
+            Eco-Friendly Packaging
+            Unmatched Customer Service
+            Affordable and Transparent Pricing
+            At Petals, we don't just deliver flowers—we deliver joy, love, and beautiful memories. Let us help you make every moment bloom. 🌸
+
+Would you like any specific edits or additions to this description?
           </p>
           <a href="#" class="button">Learn more</a>
         </div>
