--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,11 @@
 
   <p id="responseMessage" class="hidden"></p>
     </section>
+     <footer>
+      <div class="footer-container">
+        <p>&copy; 2025 Petals Flower Shop. All rights reserved.</p>
+      </div>
+    </footer>
 
     <script src="./js/contact.js"></script>
 </body>
