--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PETALS</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body class="index">
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body class="index">
     <header>
-        <a href="#" class="logo">PETALS<span>.</span></a>
+      <a href="#" class="logo">PETALS<span>.</span></a>
 
-        <nav class="navbar">
-            <a href="index.html">HOME</a>
-            <a href="about.html">ABOUT US</a>
-            <a href="products.html">PRODUCTS</a>
-            <a href="contact.html">CONTACT US</a>
-        </nav>
+      <nav class="navbar">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT US</a>
+        <a href="products.html">PRODUCTS</a>
+        <a href="contact.html">CONTACT US</a>
+      </nav>
     </header>
 
     <section class="home" id="home">
-        <div class="content">
-            <h2>FRESH FLOWERS</h2>
-            <span> beatiful and natural flowers</span>
-            <p> 
-                Welcome to Petals, your go-to destination for beautiful, fresh, and thoughtfully curated flowers delivered straight to your doorstep. At Petals, we believe every occasion, big or small, deserves the perfect floral touch. From vibrant bouquets that brighten birthdays to elegant arrangements that express love, gratitude, or sympathy, we have something for every moment.
-
-                Our shop is committed to quality and creativity. We source only the freshest blooms and collaborate with expert floral designers to craft stunning arrangements that leave lasting impressions. Whether you're looking to surprise a loved one or simply treat yourself, Petals makes it easy with a seamless online shopping experience.
-            </p> 
-            <a href="#" class="button">shop now</a>
-        </div>
+      <div class="content">
+        <h2>FRESH FLOWERS</h2>
+        <span> beatiful and natural flowers</span>
+        <p>
+          Welcome to Petals, your go-to destination for beautiful, fresh, and
+          thoughtfully curated flowers delivered straight to your doorstep. At
+          Petals, we believe every occasion, big or small, deserves the perfect
+          floral touch. From vibrant bouquets that brighten birthdays to elegant
+          arrangements that express love, gratitude, or sympathy, we have
+          something for every moment. Our shop is committed to quality and
+          creativity. We source only the freshest blooms and collaborate with
+          expert floral designers to craft stunning arrangements that leave
+          lasting impressions. Whether you're looking to surprise a loved one or
+          simply treat yourself, Petals makes it easy with a seamless online
+          shopping experience.
+        </p>
+        <a href="#" class="button">shop now</a>
+      </div>
     </section>
+    <footer>
+      <div class="footer-container">
+        <p>&copy; 2025 Petals Flower Shop. All rights reserved.</p>
+      </div>
+    </footer>
 
     <script src="./js/index.js"></script>
-</body>
+  </body>
 </html>
