--- a/about.html
+++ b/about.html
@@ -49,6 +49,11 @@ Would you like any specific edits or additions to this description?
         </div>
       </div>
     </section>
+     <footer>
+      <div class="footer-container">
+        <p>&copy; 2025 Petals Flower Shop. All rights reserved.</p>
+      </div>
+    </footer>
     <script src="./js/about.js"></script>
   </body>
 </html>
