--- a/products.html
+++ b/products.html
@@ -123,6 +123,11 @@
         </div>
     </section>
     
+     <footer>
+      <div class="footer-container">
+        <p>&copy; 2025 Petals Flower Shop. All rights reserved.</p>
+      </div>
+    </footer>
 
     <script src="./js/products.js"></script>
 </body>
