--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PETALS</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body class="index">
+  <body>
     <header>
       <a href="#" class="logo">PETALS<span>.</span></a>
 
